--- a/style.css
+++ b/style.css
@@ -457,3 +457,43 @@
     font-family: Arial;
     font-size: 56px;
 }
+#veca{
+    position: absolute;
+    top: 843px;
+    left: 780px;
+    font-size: 32px;
+    color:yellow;
+    font-family: Arial;
+}
+#manja{
+    position: absolute;
+    top: 880px;
+    left: 800px;
+    font-size: 32px;
+    color:yellow;
+    font-family: Arial;
+}
+#izbormanja{
+    position: absolute;
+    top: 500px;
+    left: 580px;
+    font-size: 128px;
+    color:yellow;
+    font-family: Arial;
+}
+#izborveca{
+    position: absolute;
+    top: 500px;
+    left: 580px;
+    font-size: 128px;
+    color:yellow;
+    font-family: Arial;
+}
+#kartaxx{
+    position: absolute;
+    top: 40px;
+    left: 1780px;
+    font-size: 28px;
+    color:yellow;
+    font-family: Arial;
+}
